# pkd-fastapi

./: .env  .gitignore  Makefile  Note.txt  commands  docker-compose.yml  dockerFile  main.py  main.txt  nginx.conf  pyproject.toml  realm-config.json  requirements.txt
microservice-auth/: Dockerfile  main.py
microservice-chipset/: auth.py  main.py  user.py
microservice-items/: Dockerfile  auth.py  main.py  pyproject.toml
microservice_chipset/: Dockerfile  auth.py  chipsets.py  main.py  old_auth.py.txt  user.py
microservice_chipset/tests/: test_user_signup.py
nginx/: auth.conf  chipsets.conf  items.conf
