[tool.poetry]
name = "pdk-fastapi"
version = "0.1.0"
description = "Servidor fastapi com keycloak"
authors = ["Romario J. Veloso <romadeoliveira3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
passlib = "^1.7.4"
bcrypt = "4.0.1"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.39"
fastapi-crudrouter = "^0.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
